# distributed-process-registry

./: .gitignore  distributed-process-registry.cabal  flake.nix  hie.yaml
src/Control/Distributed/Process/: Registry.hs
tests/: TestRegistry.hs  TestUtils.hs
