name:           distributed-process-registry
version:        0.1.0.2
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
Copyright:      Tim Watson 2012 - 2015
Author:         Tim Watson
Maintainer:     watson.timothy@gmail.com
Stability:      experimental
Category:       Control
Homepage:       http://github.com/haskell-distributed/distributed-process-registry
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-registry/issues
synopsis:       Cloud Haskell Extended Process Registry
description:    This package provides an extended process registry.
tested-with:    GHC == 7.4.2 GHC == 7.6.2 GHC == 9.6.7

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-registry

flag perf
  description: Build with profiling enabled
  default: False

library
  build-depends:
                   base >= 4.14 && < 5,
                   data-accessor >= 0.2.2.3,
                   distributed-process >= 0.6.6 && < 0.8,
                   distributed-process-extras >= 0.3.1 && < 0.4,
                   distributed-process-supervisor >= 0.2.0 && < 0.3,
                   distributed-process-client-server >= 0.2.0 && < 0.3,
                   binary >= 0.8 && < 0.10,
                   deepseq >= 1.4 && < 1.7,
                   mtl >= 2.0 && < 2.4,
                   containers >= 0.6 && < 0.8,
                   hashable >= 1.2.0.5 && < 1.6,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   fingertree < 0.2,
                   stm >= 2.4 && < 2.6,
                   time >= 1.9,
                   transformers
  if impl(ghc <= 7.5)
    Build-Depends:   template-haskell == 2.7.0.0,
                     derive == 2.5.5,
                     uniplate == 1.6.12,
                     ghc-prim
  extensions:      CPP
  other-modules:
      Paths_distributed_process_registry
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules: Control.Distributed.Process.Registry

test-suite RegistryTests
  type:            exitcode-stdio-1.0
--  x-uses-tf:       true
  build-depends:
                   base >= 4.14 && < 5,
                   ansi-terminal >= 0.5 && < 0.7,
                   containers >= 0.6 && < 0.8,
                   hashable >= 1.2.0.5 && < 1.6,
                   unordered-containers >= 0.2.3.0 && < 0.3,
                   distributed-process >= 0.6.6 && < 0.8,
                   distributed-process-extras >= 0.3.1 && < 0.4,
                   distributed-process-registry,
                   distributed-process-tests >= 0.4.4 && < 0.6,
                   distributed-static,
                   bytestring,
                   data-accessor >= 0.2.2.3,
                   fingertree < 0.2,
                   network-transport >= 0.4.1.0 && < 0.6,
                   deepseq >= 1.4 && < 1.7,
                   mtl >= 2.0 && < 2.4,
                   network-transport-tcp >= 0.4 && < 0.9,
                   binary >= 0.8 && < 0.10,
                   network >= 3.1 && < 3.3,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.4 && < 2.6,
                   time >= 1.9,
                   test-framework >= 0.6 && < 0.9,
                   test-framework-hunit,
                   transformers,
                   rematch >= 0.2.0.0
  if impl(ghc <= 7.5)
    Build-Depends: ghc-prim
  other-modules:
      Paths_distributed_process_registry
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -eventlog
  extensions:      CPP
  main-is:         TestRegistry.hs
